# centralized-messaging-service

./: CMakeLists.txt  Makefile  README.md  save.c
.github/ISSUE_TEMPLATE/: feature_request.md
client/src/: main.cpp
client/src/misc/: helpers.h
client/src/models/: connect.cpp  connect.h  manager.cpp  manager.h  user.cpp  user.h
server/files/: Jamaica.txt  Japan.txt  Tuga.txt
server/src/: api.cpp  api.h  main.cpp  user.cpp  user.h
server/src/misc/: helpers.cpp  helpers.h
server/src/models/: connect.cpp  connect.h  group.cpp  group.h  manager.cpp  manager.h  message.cpp  message.h  user.cpp  user.h
test/: test.sh
test/feedback/: README.txt  script_01.txt  script_02.txt  script_03.txt  script_04.txt  script_05.txt  script_06.txt  script_07.txt  script_08.txt  script_09.txt  script_10.txt  script_11.txt  script_12.txt  script_13.txt  script_15.txt
test/out-client/: out_clt_1.txt  out_clt_2.txt  out_clt_27.txt  out_clt_29.txt  out_clt_31.txt  out_clt_33.txt  out_clt_35.txt  out_clt_6.txt  out_clt_7.txt  out_clt_8.txt
